# WaveOpticsFiber

./: .gitignore  Background.hpp  Basis.hpp  CMakeLists.txt  Element.hpp  MoM_ob.cpp  MoM_ob.hpp  README.md  Solver.cpp  Solver.hpp  Wave.hpp  genDist.cpp
crosssection/: xvec_silk.txt  yvec_silk.txt
ior/: silkK_double.binary
